# stk-mcp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  agi.stk12-12.10.0-py3-none-any.whl  main.py  pyproject.toml
examples/: basic_mission.py
scripts/: run_dev.py
src/stk_logic/: core.py  objects.py
src/stk_mcp/: __init__.py  app.py  cli.py
src/stk_mcp/stk_logic/: analysis.py  config.py  core.py  decorators.py  location.py  logging_config.py  objects.py  satellite.py  scenario.py  utils.py
src/stk_mcp/tools/: __init__.py  analysis.py  health.py  location.py  objects.py  satellite.py  scenario.py
src/tools/: __init__.py  objects.py  scenario.py
